// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
.emotion-28 {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.emotion-8 {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.emotion-6 {
  color: #4a4f62;
}

.emotion-6 a {
  color: inherit;
}

.emotion-6 tr:nth-of-type(even) {
  background-color: #fafafb;
}

.emotion-6:hover {
  color: #4f0599;
}

.emotion-6:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6 [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.emotion-6:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.emotion-0 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.emotion-10 {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

<table
  className="emotion-28 emotion-29"
>
  <thead
    className="emotion-8 emotion-9"
  >
    <tr
      className="emotion-6 emotion-7"
    >
      <th
        className="emotion-0 emotion-1"
      >
        ID
      </th>
      <th
        className="emotion-0 emotion-1"
      >
        Status
      </th>
      <th
        className="emotion-0 emotion-1"
      >
        Date
      </th>
    </tr>
  </thead>
  <tbody
    className="emotion-26 emotion-27"
  >
    <tr
      className="emotion-6 emotion-7"
    >
      <td
        className="emotion-10 emotion-11"
      >
        165
      </td>
      <td
        className="emotion-10 emotion-11"
      >
        Ongoing
      </td>
      <td
        className="emotion-10 emotion-11"
      >
        Yesterday
      </td>
    </tr>
    <tr
      className="emotion-6 emotion-7"
    >
      <td
        className="emotion-10 emotion-11"
      >
        56
      </td>
      <td
        className="emotion-10 emotion-11"
      >
        Resolved
      </td>
      <td
        className="emotion-10 emotion-11"
      >
        1 hour ago
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table renders correctly while loading 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-16 {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.emotion-6 {
  border: 0;
  border-bottom-width: 1px;
  border-color: #d4dae7;
  border-style: solid;
}

.emotion-4 {
  color: #4a4f62;
}

.emotion-4 a {
  color: inherit;
}

.emotion-4 tr:nth-of-type(even) {
  background-color: #fafafb;
}

.emotion-4:hover {
  color: #4f0599;
}

.emotion-4:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.emotion-4:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.emotion-0 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.emotion-10 {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.emotion-9.emotion-9 {
  color: #bd4932;
  position: absolute;
  top: 16px;
  left: 50%;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

<table
  className="emotion-16 emotion-17"
>
  <thead
    className="emotion-6 emotion-7"
  >
    <tr
      className="emotion-4 emotion-5"
    >
      <th
        className="emotion-0 emotion-1"
      >
        ID
      </th>
      <th
        className="emotion-0 emotion-1"
      >
        Date
      </th>
    </tr>
  </thead>
  <tbody
    className="emotion-14 emotion-15"
  >
    <tr
      className="emotion-4 emotion-5"
    >
      <td
        className="emotion-10 emotion-11"
        colSpan={2}
        height={80}
      >
        <div
          aria-valuemax={1}
          aria-valuemin={0}
          className="sui-box emotion-9"
          role="progressbar"
        >
          <div
            className="emotion-8"
            style={
              Object {
                "height": 40,
                "width": 40,
              }
            }
          >
            <svg
              height="100%"
              viewBox="0 0 32 32"
              width="100%"
            >
              <circle
                cx="16"
                cy="16"
                fill="none"
                r="14"
                strokeWidth="4"
                style={
                  Object {
                    "opacity": 0.2,
                    "stroke": "currentColor",
                  }
                }
              />
              <circle
                cx="16"
                cy="16"
                fill="none"
                r="14"
                strokeWidth="4"
                style={
                  Object {
                    "stroke": "currentColor",
                    "strokeDasharray": 80,
                    "strokeDashoffset": 60,
                  }
                }
              />
            </svg>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
